# rigent

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml.example
src/: config.rs  framework.rs  lib.rs  main.rs  memory.rs  status.rs
src/agent/: runner.rs
src/skill/: loader.rs  mod.rs  platform.rs  types.rs
src/tool/: agentlink.rs  local.rs  mod.rs
